--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "tedious": "^9.2.1"
   },
   "scripts": {
-    "start": "PORT=4040 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
