--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "uzders",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.20.0",
     "mssql": "^6.2.1",
+    "qs": "^6.9.4",
     "react": "^16.13.1",
     "react-data-table-component": "^6.11.3",
     "react-dom": "^16.13.1",
